--- a/src/app/_layout/headers.scss
+++ b/src/app/_layout/headers.scss
@@ -99,7 +99,7 @@ section {
   width: 100vw;
   margin: -100px 0 0 -30px;
   padding: 50px;
-  padding-top: 110px;
+  padding-top: 90px;
   max-height: 23rem;
   border-radius: 0 0 30% 30%;
   list-style-type: none;
