--- a/src/app/service-desk/services/services.component.scss
+++ b/src/app/service-desk/services/services.component.scss
@@ -31,7 +31,7 @@ $lighter_back: #eee;
 
 section {
   display: grid;
-  margin-bottom: auto $mediaum_border $mediaum_border;
+  margin: auto $mediaum_border $mediaum_border;
   min-height: 10rem;
   gap: .5rem;
 
